# XIH6-Thermal-Camera

./: .gitattributes  .gitignore  .mxproject  AGENTS.md  Arduino平台Lepton红外热成像VoSPI驱动详解.md  CLAUDE.md  ESP32-s3无线传输.md  ESP32与STM32引脚连接.txt  ESP32的TCP通信.md  ESP32的TCP通信实战指南.md  LEPTON_IO_CONNET.txt  LEPTON无损压缩.md  README.md  README_10.md  README_11.md  README_12.md  README_13.md  README_14.md  README_15.md  README_2.md  README_3.md  README_4.md  README_5.md  README_6.md  README_7.md  README_8.md  README_9.md  XIH6_V2.ioc  uart_log.txt  uart_log_new.txt  热成像传输协议.md
Android_studio_project/: settings.gradle.kts
Android_studio_project/app/: build.gradle.kts
Android_studio_project/gradle/wrapper/: gradle-wrapper.properties
Core/Inc/: main.h  spi.h  stm32h7xx_hal_conf.h  stm32h7xx_it.h  usart.h
Core/Src/: adc.c  dma.c  gpio.c  i2c.c  ltdc.c  main.c  sdmmc.c  spi.c  stm32h7xx_it.c  usart.c
Drivers/PER/LCD/: lcd.c  (+5 more)
Drivers/other/: DELAY.c  DELAY.h  LED.c  LED.h
Drivers/soft/: SW_I2C.c  SW_I2C.h
ESP_UART_Host/ESP_UART/: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  colormap.cpp  colormap.h  frameparser.cpp  frameparser.h  main.cpp  mainwindow.cpp  mainwindow.h  thermalwidget.cpp  thermalwidget.h  修复系统PATH.bat  启动上位机.bat
ESP_UART_Host/ESP_UART_Windows/: CMakeLists.txt  colormap.cpp  colormap.h  framegate.cpp  framegate.h  frameparser.cpp  frameparser.h  launch.bat  main.cpp  mainwindow.cpp  mainwindow.h  package.bat  resources.qrc  serialworker.cpp  serialworker.h  style.qss  thermalwidget.cpp  thermalwidget.h  热成像传输协议.md
ESP_UART_Host/ESP_UART_Windows/tests/: frameparser_selftest.cpp  thermalwidget_selftest.cpp
MDK-ARM/: XIH6_V2.uvoptx  XIH6_V2.uvprojx  build_log.txt  startup_stm32h743xx.s
MDK-ARM/XIH6_V2/: XIH6_V2.hex  XIH6_V2.map
PCB/: ProPrj_26嵌赛整合_2026-07-09.epro2
esp32/sketch_jul08a/: sketch_jul08a.ino
tools/: lepton_compress_sim.py
(+34 files in other folders)
